--- a/src/breakfast.css
+++ b/src/breakfast.css
@@ -1,10 +1,16 @@
 .americanCoffee, .coffeeMilk, .sandwich, .juice{
-    background-color: #A098BE;
+    background-color: #f8ecfe;
     color: white;
     padding: 8px 10px;
     text-align: center;
     text-decoration: none;
     font-size: 15px;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 10px;
+    height: 60px;
+    width: 300px;
+    color: #590782;
+    margin-top: 30px;
+    position: relative;
+    font-weight: bold;
 }
