--- a/src/kitchen.css
+++ b/src/kitchen.css
@@ -2,25 +2,35 @@
     position: relative;
     font-size: 40px;
     /* top: 10px;  */
-    left: 100px; 
+    /* left: 100px;  */
     /* width: 60%; */
     padding: 0;
+    color: #590782;
+    font-family: arial;
+    top: 20px;
 }
 
 .content{
     font-size: 20px;
-    border-radius: 13px; 
-    border: 2px solid blueviolet;
+    border-radius: 5px; 
+    border: 2px solid #590782;
     font-family: Arial;
-    text-align: center;
+    top: 25px;
+    position: relative;
+    padding: 4px 10px;
+    width: 500px;
+    height: 20px;
  }
 
  .requested_detail{
     font-family: Arial;
+    position: relative;
+    top: 25px;
  }
 
  .detailList{
     top: 50px;
+    margin: 3px;
  }
 
 .btndelete, .btnsubmit{
@@ -28,24 +38,32 @@
 }
 
 .btndelete{
-   color: blueviolet;
+   color: #7a0ab2;
    font-weight: bolder;
 }
 
 .total{
    font-family: Arial;
-   font-weight: bolder
+   font-weight: bolder;
+   top: 25px;
+   position: relative;
 }
 
 .btnsubmit{
-   background-color: blueviolet;
-    color: white;
-    padding: 8px 10px;
-    text-align: center;
-    font-size: 15px;
-    cursor: pointer;
-    border-radius: 20px;
-    position: relative;
-    left: 30%;
+   background-color: #590782;
+   color: white;
+   padding: 8px 10px;
+   font-size: 15px;
+   cursor: pointer;
+   border-radius: 10px;
+   right: 60px;
+   position: relative;
 }
 
+.btnSubmitOrder{
+   top: 30px;
+   position: relative;
+   justify-content: space-around;
+   display: flex
+
+}
