--- a/src/liquids.css
+++ b/src/liquids.css
@@ -1,11 +1,15 @@
 .water, .waterBig, .soda, .bigSoda{
-    background-color: #A098BE;
-    color: white;
+    background-color: #f8ecfe;
+    color: #590782;
     padding: 8px 10px;
-    text-align: center;
     text-decoration: none;
     font-size: 15px;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 10px;
+    position: relative;
+    margin-top: 30px;
+    height: 60px;
+    width: 300px;
+    font-weight: bold;
 }
 
