--- a/src/optionBreakfast.css
+++ b/src/optionBreakfast.css
@@ -1,5 +1,5 @@
 .breakfastButton{
-    background-color: blueviolet;
+    background-color: #590782;
     color: white;
     padding: 8px 10px;
     text-align: center;
@@ -8,6 +8,8 @@
     font-size: 15px;
     /* margin: 4px 2px; */
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 10px;
+    right: 130px;
+    position: relative;
 
 }
