--- a/src/optionFood.css
+++ b/src/optionFood.css
@@ -1,12 +1,13 @@
 .optionButton{
-    background-color: blueviolet;
+    background-color: #590782;
     color: white;
     padding: 8px 10px;
-    text-align: center;
     text-decoration: none;
     /* display: flex; */
     font-size: 15px;
     /* margin: 4px 2px; */
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 10px;
+    right: 75px;
+    position: relative;
 }
