--- a/src/optionLiquids.css
+++ b/src/optionLiquids.css
@@ -1,5 +1,5 @@
 .buttonLiquids{
-    background-color: blueviolet;
+    background-color: #590782;
     color: white;
     padding: 8px 10px;
     text-align: center;
@@ -8,5 +8,7 @@
     font-size: 15px;
     /* margin: 4px 2px; */
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 10px;
+    right: 30px;
+    position: relative;
 }
